# fs_log_monitor

./: .gitignore  Cargo.toml  bacon.toml
src/: cli.rs  lib.rs  log_info.rs  main.rs  notification.rs  state.rs
src/notification/: discord.rs  email.rs
tests/: log_parsing.rs
tests/sample_logs/: ProfileName 2024-10-15 092845.903 [Error].html  ProfileName 2024-10-15 093609.877.html  ProfileName 2024-11-08 140913.247 [Error].html  ProfileName 2024-11-08 145021.053 [Stopped].html
tests/snapshots/: log_parsing__output_snapshot-2.snap  log_parsing__output_snapshot-3.snap  log_parsing__output_snapshot.snap
