[package]
name = "fs_log_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.20", features = ["cargo", "env", "derive", "wrap_help"] }
lettre = "0.11.10"
reqwest = { version = "0.12.9", features = ["blocking"] }
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
